# dingleberry

./: .gitignore  Cargo.toml  LICENSE  README.md
coding_challenges/: config.dconf
coding_challenges/src/: absolute_sum.dingle  array_of_mul.dingle  main.dingle  smallbig.dingle  testing.dingle
dingleberry-back/: Cargo.toml
dingleberry-back/src/: byte_compiler.rs  bytecode.rs  debug.rs  gc.rs  lib.rs  nativefunction.rs  object.rs  symbol_table.rs  value.rs  value_methods.rs  vm.rs
dingleberry-cli/: Cargo.toml
dingleberry-cli/src/: main.rs  native_types.rs
dingleberry-front/: Cargo.toml
dingleberry-front/src/: ast.rs  ast_inner.rs  lexer.rs  lib.rs  parser.rs  source.rs  token.rs
dingleberry-shared/: Cargo.toml
dingleberry-shared/src/: error.rs  lib.rs  visitor.rs
dingleberry-vsc/: dingleberry-0.0.1.vsix  package.json
dingleberry-vsc/syntaxes/: dingleberry.tmLanguage.json
dummy_project/: config.dconf  config.json
dummy_project/src/: main.dingle  testing.dingle
examples/: generator.dingle  hello_world.dingle  modules.dingle  struct_constructor.dingle  structs.dingle  test.dingle
